Fixed Slider Alignment on Firefox

--- a/app/scss/brands/maytag/_ng-slider.scss
+++ b/app/scss/brands/maytag/_ng-slider.scss
@@ -192,7 +192,7 @@ div.people6 .jslider.vertical .jslider-value:not(.jslider-value-to) {
 			position: relative; 
 			width: 860px;
 			height: 40px;
-			background: url('../img/slider-bg.png');
+			background: url('../img/slider-bg.png') center center;
 			margin-left: 0px;
 			z-index: 10;
             background-repeat: no-repeat;
